# school-algolithm

./: Alphabet.cpp  CMakeLists.txt  MagicSQR.cpp  main
week1/: Caesar.cpp  Gugudan.cpp  MagicSQR.cpp  MagicSQR_work.cpp
week2/: 02HW.cpp  ArrPointer.cpp  Combi.cpp  Euclid.cpp  Fac.cpp  Fib.cpp  Hanoi.cpp  PrintToNFwrd.cpp  SkipEraser.cpp  binarySearch.cpp
week3/: 23HW03.cpp  PrintArrayBwrd.cpp  PrintArrayFwrd.cpp  PrintK2NBwrd.cpp  PrintK2NFwrd.cpp  PrintToNBwrd.cpp  PrintToNFwrd.cpp
week4/: NatNo.cpp
week5/: PolyAdd.cpp
week6/: ArrIndex1.cpp  ArrIndex2.cpp  ArrIndex3.cpp  ArrIndex4.cpp  Band.cpp  TriangleLwr.cpp  TriangleUpr.cpp
week7/: Queue.cpp  QueueCrclr.cpp  QueueTag.cpp  Stack1.cpp  Stack2.cpp
