cmake_minimum_required(VERSION 3.24)
project(알고리즘)

set(CMAKE_CXX_STANDARD 17)

add_executable(1-4 week1/MagicSQR.cpp)
add_executable(1-1 week1/Alphabet.cpp week1/MagicSQR_work.cpp)
add_executable(1-2 week1/Gugudan.cpp)
add_executable(1-3 week1/Caesar.cpp)
add_executable(1-5 week1/MagicSQR_work.cpp)

add_executable(2-1 week2/ArrPointer.cpp)
add_executable(2-2 week2/Fac.cpp)
add_executable(2-3 week2/Fib.cpp)
add_executable(2-4 week2/Combi.cpp)
add_executable(2-5 week2/Hanoi.cpp)
add_executable(2-6 week2/Euclid.cpp)
add_executable(2-7 week2/SkipEraser.cpp)
