cmake_minimum_required(VERSION 3.24)
project(알고리즘)

set(CMAKE_CXX_STANDARD 17)

add_executable(1-4 week1/MagicSQR.cpp)
add_executable(1-1 week1/Alphabet.cpp week1/MagicSQR_work.cpp)
add_executable(1-2 week1/Gugudan.cpp)
add_executable(1-3 week1/Caesar.cpp)
add_executable(1-5 week1/MagicSQR_work.cpp)

add_executable(2-1 week2/ArrPointer.cpp)
add_executable(2-2 week2/Fac.cpp)
add_executable(2-3 week2/Fib.cpp)
add_executable(2-4 week2/Combi.cpp)
add_executable(2-5 week2/Hanoi.cpp)
add_executable(2-6 week2/Euclid.cpp)
add_executable(2-7 week2/SkipEraser.cpp)
add_executable(2-8 week2/PrintToNFwrd.cpp)
add_executable(2-9 week2/02HW.cpp)

add_executable(3-1 week3/PrintToNFwrd.cpp)
add_executable(3-2 week3/PrintToNBwrd.cpp)
add_executable(3-3 week3/PrintK2NFwrd.cpp)
add_executable(3-4 week3/PrintArrayFwrd.cpp)
add_executable(3-5 week3/23HW03.cpp)

add_executable(4-1 week4/NatNo.cpp)

add_executable(5-1 week5/PolyAdd.cpp)

add_executable(6-1 week6/Band.cpp)
add_executable(6-2 week6/TriangleLwr.cpp)
add_executable(6-3 week6/TriangleUpr.cpp)
add_executable(6-4 week6/ArrIndex1.cpp)
add_executable(6-5 week6/ArrIndex2.cpp)
add_executable(6-6 week6/ArrIndex3.cpp)
add_executable(6-7 week6/ArrIndex4.cpp)

add_executable(7-1 week7/Stack1.cpp)
add_executable(7-2 week7/Stack2.cpp)
add_executable(7-3 week7/Queue.cpp)
add_executable(7-4 week7/QueueReset.cpp)
add_executable(7-5 week7/QueueShift.cpp)
add_executable(7-6 week7/QueueTag.cpp)
add_executable(7-7 week7/QueueCrclr.cpp)
add_executable(7-8 week7/DeQue.cpp)